--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
     <header>
         <div class="container-fluid landing">
             <div class="landing-name">
-                <h1>Hi, This is Bobby!</h1>
+                <h1>HI, THIS IS BOBBY!</h1>
             </div>
             <div class="mainheader row justify-content-around">
                 <div class="col-lg-12 justify-content-center">
                     <h2>
-                        <span>Purdue University Alumni majored in Industrial Engineering</span><br>
+                        <span>Purdue University Alumni in Industrial Engineering</span><br>
                         <span>Web Administrator at the Korea Times-Chicago</span>
                     </h2>
                 </div>
