--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
                     <li class="nav-item">
                         <a href="#about" class="nav-link">ABOUT</a>
                     </li>
+
+                    <li class="nav-item">
+                        <a href="#skills" class="nav-link">SKILLS</a>
+                    </li>
             
                     <li class="nav-item">
                         <a href="#experience" class="nav-link">EXPERIENCE</a>
@@ -147,7 +151,7 @@
     </section>
     </div>
     
-    <section class="technicalSkills">
+    <section class="technicalSkills" id="skills">
         <div class="container">
             <div class="row justify-content-around">
                 <span class="col-md-3"></span>
