--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                     <p class="skillType"><i class="fas fa-file-code"></i> Programming</p>
                     <img src="imgs/htmlcssjs.png" alt="" height="70px">
                     <img src="imgs/python.png" alt="" height="70px">
-                    <img src="imgs/rlogo.png" alt="" height="70px">
+                    <img src="imgs/Rlogo.png" alt="" height="70px">
                     <img src="imgs/matlab.png" alt="" height="70px">
                     <img src="imgs/vscode.png" alt="" height="70px">
                 
@@ -188,9 +188,9 @@
                 
                 <div class="col-md-6 item">
                     <p class="skillType"><i class="fas fa-drafting-compass"></i> CAD</p>
-                    <img src="imgs/ansys_logo.png" alt="" height="70px">
+                    <img src="imgs/Ansys_logo.png" alt="" height="70px">
                     <img src="imgs/autocad.png" alt="" height="70px">
-                    <img src="imgs/Solidworks.png" alt="" height="70px">
+                    <img src="imgs/solidworks.png" alt="" height="70px">
                     <img src="imgs/catia.png" alt="" height="70px">
                 </div>
             </div>
