--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                         <h3>Korea Times</h3>
                         <p>Updated company website based on user feedback to improve usability for the target user pool. I also minimized page
                         loading speed within the given service provider capability. Additionally I had the role of technical support and editor,
-                        meaning that troubleshooted my coworkers` technical issues at work and edited/published newspapers both physically and
+                        meaning that troubleshooted my coworkers' technical issues at work and edited/published newspapers both physically and
                         electronically.</p>
                     </div>
                 </div>
@@ -254,7 +254,7 @@
             </div>
             <div class = contMessage>
                 <p>Lombard, Illinois <i class="fas fa-home"></i></p>
-                <p>Let`s get in touch!</p>
+                <p>Let's get in touch!</p>
             </div>
 
         </div>
