--- a/index.html
+++ b/index.html
@@ -199,10 +199,10 @@
                     <img class="koreatimes img-fluid" src="imgs/newspaper.jpg" alt="">
                     <div class="koreatimes-filter overlay">
                         <h3>Korea Times</h3>
-                        <p>Updated company website based on user feedback to improve usability for the target user pool. I also minimized page
-                        loading speed within the given service provider capability. Additionally I had the role of technical support and editor,
-                        meaning that troubleshooted my coworkers' technical issues at work and edited/published newspapers both physically and
-                        electronically.</p>
+                        <p>I updated the company website based on user feedback to improve usability for the target user pool. I also minimized
+                        page loading speed within the given service provider capability. Additionally, I had the role of technical support and
+                        editor, meaning that I troubleshooted my coworkers’ technical issues at work and edited/published newspapers both
+                        physically and electronically.</p>
                     </div>
                 </div>
         
