--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
                     <img src="imgs/windows.png" alt="" height="70px">
                     <img src="imgs/apple.png" alt="" height="70px">
                     <img src="imgs/ubuntu-icon.png" alt="" height="70px">
+                    <img src="imgs/wordpress.png" alt="" height="70px">
                 </div>
                 
                 <div class="col-md-6 item">
