--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                 <a href="mailto:bobby.sihun.kim@gmail.com" target="_blank" class="fas fa-envelope-square"></a>
             </div>
             <div class = contMessage>
-                <p>Chandler, Arizona <i class="fas fa-home"></i></p>
+                <p>Chandler, AZ <i class="fas fa-home"></i></p>
                 <p>Let's get in touch!</p>
             </div>
 
