--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <div class="item">
                     <div class="icon">
                         <i class="fas fa-tools"></i></i>
-                        <h2 class="about">Technical Support</h2>
+                        <h2 class="about">IT Technician</h2>
                     </div>
                 
                     <p class="content">I have been very curious about computers and its parts since I was young, to the point that I disassembled my dad’s
